metadatafullcopy/unpackaged/objects/Large_Loss_Review__c.object
<CustomObject>
    <description>To track the large loss review process.</description>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_Percent__c</fullName>
        <label>Allocation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_Change_Orders_approved__c</fullName>
        <label>Are Change Orders approved?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Are_there_Change_Orders__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_Supplements_Approved__c</fullName>
        <label>Are the Supplements Approved?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Are_there_Pending_Supplements__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Change_Orders__c</fullName>
        <label>Are there Change Orders?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Pending_Supplements__c</fullName>
        <label>Are there Pending Supplements?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Pending__c</fullName>
        <formula>IF(
    NOT(ISBLANK( NLLS_Review_Date__c)),
    (NLLS_Review_Date__c - NLL_Creation_Date__c),
    NOW() - NLL_Creation_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date_Per_Contract__c</fullName>
        <label>Estimated Completion Date Per Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date_Per_PM__c</fullName>
        <label>Estimated Completion Date Per PM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_GP_Percent__c</fullName>
        <label>Estimated GP%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_for_Current_Month__c</fullName>
        <label>Forecast for Current Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Forecast__c</fullName>
        <label>Future Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_To_Date_GP_Percent__c</fullName>
        <label>Job To Date GP%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Large Loss Reviews</relationshipLabel>
        <relationshipName>Large_Loss_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Costs__c</fullName>
        <label>Job to Date Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Payments__c</fullName>
        <label>Job to Date Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Work_Billed__c</fullName>
        <label>Job to Date Work Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Large_Loss_Number_Incremental__c</fullName>
        <label>Large Loss Number Incremental</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_NLLS_Approval_Date_Time__c</fullName>
        <label>Last NLLS Approval Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_NLLS_Approver__c</fullName>
        <label>Last NLLS Approver</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NLLS_ID__c</fullName>
        <formula>Job__r.Job_Number_No_Dashes__c &amp; &quot;-&quot; &amp; TEXT(NLLS_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NLLS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NLLS_Number__c</fullName>
        <label>NLL Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLLS_Review_Date__c</fullName>
        <label>NLLS Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NLLS_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NLLS Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Large_Loss_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NLL_Creation_Date__c</fullName>
        <label>NLL Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NLL_Reviewer__c</fullName>
        <label>NLL Reviewer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Supplements__c</fullName>
        <inlineHelpText>Enter proposed supplement amount</inlineHelpText>
        <label>Pending Supplements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Review</label>
        <referenceTo>Large_Loss_Review__c</referenceTo>
        <relationshipLabel>Large Loss Reviews</relationshipLabel>
        <relationshipName>Large_Loss_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Large_Loss_Reviews3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Large_Loss_Reviews4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Large_Loss_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Large_Loss_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Billing_Forecast__c</fullName>
        <label>Total Billing Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Goal__c</fullName>
        <label>Total Budget Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Will_the_job_fall_under_the_original_est__c</fullName>
        <label>Will job fall under original est GP%?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Large Loss Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_LL_Reviews</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Days_Pending__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Job__c</columns>
        <columns>Project_Director__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Job_to_Date_Costs__c</columns>
        <columns>Job_to_Date_Work_Billed__c</columns>
        <columns>Job_To_Date_GP_Percent__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Billing_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>All Pending LL Reviews</label>
        <sharedTo>
            <group>Large_Loss_Management_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Pending_LL_Reviews_PD</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Days_Pending__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Job__c</columns>
        <columns>Project_Director__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Job_to_Date_Costs__c</columns>
        <columns>Job_to_Date_Work_Billed__c</columns>
        <columns>Job_To_Date_GP_Percent__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Billing_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>My Pending LL Reviews (PD)</label>
    </listViews>
    <nameField>
        <label>Large Loss Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Large Loss Reviews</pluralLabel>
    <recordTypes>
        <fullName>Large_Loss_Review</fullName>
        <active>true</active>
        <label>Large Loss Review</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pending_Change_Order_Fields</fullName>
        <active>true</active>
        <description>If there are pending change orders, require Approved Change Order question.</description>
        <errorConditionFormula>ISPICKVAL(  Are_there_Change_Orders__c  ,&quot;Yes&quot;) &amp;&amp;
ISBLANK(TEXT(   Are_Change_Orders_approved__c ))</errorConditionFormula>
        <errorDisplayField>Are_Change_Orders_approved__c</errorDisplayField>
        <errorMessage>Required: Are the Change Orders approved?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Supplement_Fields</fullName>
        <active>true</active>
        <description>If there are pending supplements, require Pending Supplements text field and Approved Supplement question.</description>
        <errorConditionFormula>ISPICKVAL( Are_there_Pending_Supplements__c ,&quot;Yes&quot;) &amp;&amp;
(
ISBLANK(  Pending_Supplements__c  ) || ISBLANK(TEXT(  Are_the_Supplements_Approved__c ))
)</errorConditionFormula>
        <errorMessage>Required: Pending Supplements &amp; Are the Supplements Approved?</errorMessage>
    </validationRules>
</CustomObject>